add ngFor loop in recipe-detail.component.ts for the array of ingredients (defined as string[]) use let ingredient of recipe.ingredients as ng for argument then call ingredient in the li

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Angular Configure SystemJS -->
     <script src="systemjs.config.js"></script>
 
-    <link rel="stylesheet" href="build/css/styles.css">
+    <!-- <link rel="stylesheet" href="build/css/styles.css"> -->
     <script>
       System.import('app').catch(function(err){ console.error(err);
       });
